tmp/shard/catalog-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: infra-shard
  name: shard-catalog-gateway
  namespace: istio-system
spec:
  host: catalog.shard.io
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
